--- a/src/app/components/ui/styles/AppTable.css
+++ b/src/app/components/ui/styles/AppTable.css
@@ -6,7 +6,8 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
-  /* min-width: 1000px; */
+  min-width: 1000px;
+  border-radius: 10px;
 }
 .app-table .rows {
   display: flex;
