--- a/src/app/containers/styles/AppContainer.css
+++ b/src/app/containers/styles/AppContainer.css
@@ -8,6 +8,6 @@
 }
 
 .main-content {
-  width: 100%;
+  width: calc(100vw - var(--sidebarWidth));
   height: 100%;
 }
